Bug 1457859 - PointerEvent.getCoalescedEvents timeStamps are zero, r=edgar

Differential Revision: https://phabricator.services.mozilla.com/D99922